[package]
name = "ds-ext"
version = "0.1.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Extensions to standard Rust data structures which provide additional capabilities"
repository = "https://github.com/haydnv/ds-ext"
readme = "README.md"

categories = ["data-structures"]
keywords = ["ordered", "set", "map", "custom", "order"]

[features]
all = ["hash", "stream", "serialize"]
hash = ["async-hash", "hex", "hr-id/hash"]
stream = ["async-trait", "destream", "hr-id/stream"]
serialize = ["serde", "hr-id/serde"]
uuid = ["hr-id/uuid"]

[dependencies]
async-hash = { path = "../async-hash", optional = true }
async-trait = { version = "0.1", optional = true }
derive_more = { version = "0.99", features=["display"] }
destream = { path = "../destream", optional = true }
get-size = "0.1"
get-size-derive = "0.1"
hex = { version = "0.4", optional = true }
hr-id = { path = "../hr-id" }
regex = "1.7"
safecast = { path = "../safecast" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
