[package]
name = "ds-ext"
version = "0.3.0"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Extensions to standard Rust data structures which provide additional capabilities"
repository = "https://github.com/haydnv/ds-ext"
readme = "README.md"

categories = ["data-structures"]
keywords = ["ordered", "set", "map", "custom", "order"]

[[bench]]
name = "ordmap_vs_btreemap"
harness = false

[features]
all = ["hash", "stream", "serialize"]
hash = ["async-hash", "hex"]
stream = ["async-trait", "destream"]
serialize = ["serde"]

[dependencies]
async-hash = { version = "~0.5.4", optional = true }
async-trait = { version = "0.1", optional = true }
derive_more = { version = "1.0", features=["display"] }
destream = { version = "0.8", optional = true }
get-size = "0.1"
get-size-derive = "0.1"
hex = { version = "0.4", optional = true }
safecast = "0.2"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
